After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728144 - Two YUV400 clips decoding failed using gst-vaapi
Two YUV400 clips decoding failed using gst-vaapi
Status: VERIFIED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 720305
 
 
Reported: 2014-04-14 02:56 UTC by zhenxiang.li
Modified: 2014-04-28 03:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description zhenxiang.li 2014-04-14 02:56:56 UTC
The two gray clips are:
HPCAMOLQ_BRCM_B.264
HPCVMOLQ_BRCM_B.264

testing env:
----------------
Libva:          (master)8f6a3dd1fc3f464ec8fc48b5fcb9d2d9d2fa9954
Libva_intel_driver:             (master)75a7b090e9784864d7bf567ea7d68b1c13b19922
Glib:           (master)2d96503898745dbf88bec9ff57649b2d3853a851
Gstreamer10:            (1.0)4e880d4d1e151ea64f83c28b5c3e1bbc06c57903
Gst_plugins_base10:             (1.0)2dd3f028c1e6dea799d7496639f53220818b20b1
Gst_plugins_good10:             (1.0)643d425f51f81b56deec16c01162637546708ee5
Gst_plugins_bad10:              (1.0)0587ab41b4f9979e9cfc11011ed5c970569ee3d3
Gst_plugins_ugly10:             (1.0)c7c911b8320576429e4a4234a1e29ec7436e6814
Gst_plugins_vaapi10:            (master)e52d394b9e1e7124a141cc26675068e6fc2446a9

testing command:
-----------------
gst-launch-1.0 filesrc location=/root/media_tools/decoder/Base_Ext_Main_profile/HPCAMOLQ_BRCM_B.264 '!' h264parse '!' vaapidecode '!' vaapisink sync=false

error info:
-----------------
libva info: VA-API version 0.35.0
libva info: va_getDriverName() returns 0
libva info: Trying to open /opt/X11R7/lib/dri/i965_drv_video.so
libva info: Found init function __vaDriverInit_0_35
libva info: va_openDriver() returns 0
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
ERROR: from element /GstPipeline:pipeline0/GstH264Parse:h264parse0: GStreamer encountered a general stream error.
Additional debug info:
gstbaseparse.c(3038): gst_base_parse_loop (): /GstPipeline:pipeline0/GstH264Parse:h264parse0:
streaming stopped, reason not-supported
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 Gwenole Beauchesne 2014-04-25 17:30:19 UTC
commit fa7f9cd08ca31b594a7c6eddb21601f7567b8d9b
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Fri Apr 25 14:23:11 2014 +0200

    decoder: h264: add support for grayscale encoded clips.
    
    Fix support for grayscale encoded video clips, and possibly others if
    the underlying driver supports the non-YUV 4:2:0 formats. i.e. defer
    the decision that a surface with the desired chroma format is not
    supported to the actual VA driver implementation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=728144
Comment 2 zhenxiang.li 2014-04-28 03:18:26 UTC
It has been fixed and close it.